tests/error/class-4.moc
@class Point {
    int x;
    int y;
}
@end

@class ColoredPoint : Point {
    int x;
}
@end
